# python_pyspark_demo

./: .pre-commit-config.yaml  .tool-versions  Pipfile  README.md  pyproject.toml
exercise1/: app.ipynb
exercise2/: app.ipynb
reading-text-file-demo/: app1.ipynb
reading-text-file-demo/output/output1/: .part-00000-7e74a439-9ff0-4fe8-a286-896f55d0ec01-c000.txt.crc  part-00000-7e74a439-9ff0-4fe8-a286-896f55d0ec01-c000.txt
reading-text-file-demo/output/output2/: .part-00000-6e1f4076-7d89-471b-9bd4-7f908e610554-c000.csv.crc  part-00000-6e1f4076-7d89-471b-9bd4-7f908e610554-c000.csv
reading-text-file-demo/output/output3/: .part-00000-88bcd745-369b-4af5-8ab7-90b23bf79472-c000.txt.crc  part-00000-88bcd745-369b-4af5-8ab7-90b23bf79472-c000.txt
reading-text-file-demo/output/words-by-count/: .part-00000-723a7309-baaf-4161-b8ca-6c787bcce7fe-c000.json.crc  part-00000-dbffeb38-10d1-4ed7-9245-c29f0e49ba26-c000.json
reading-text-file-demo/output/words-by-count-bigger-than-four/: .part-00000-e9265e88-cb1a-42ea-8cd5-60cf16f62f99-c000.json.crc  part-00000-e9265e88-cb1a-42ea-8cd5-60cf16f62f99-c000.json
sql/: app1.ipynb  app2.ipynb  app3.ipynb  app4.ipynb  app5.ipynb  app6.ipynb  app7.ipynb
xml/: app.ipynb  sales_report.xsd
